--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
    
 
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <link rel="stylesheet" href="css/font-awesome.min.css">
     
