--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
    
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
 
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     
 </head>
 
@@ -126,7 +126,7 @@
 
     </div>
 
-    <script src="style.js"></script>
+    <script src="js/style.js"></script>
 
 
 
